k8s2/deployment-graph-updater.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graph-updater
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: graph-updater
  template:
    metadata:
      labels:
        app: graph-updater
    spec:
      containers:
        - name: graph-updater
          image: vader404/ruok-graph-updater:0.0.1
          # image: localhost/ruok-graph-updater:0.0.1
