k8s2/svc-ruok-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphql-api
  # namespace: ingress
spec:
  selector:
    app: graphql-api
  ports:
    # - port: 4000
    - protocol: TCP
      port: 4000
      targetPort: 4000
      nodePort: 30036
