k8s2/v-svc-ruok-api.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: v-svc-ruok-api
spec:
  hosts:
  - "*"
  gateways:
  - public-gateway
  http:
  - match:
    - uri:
        prefix: /graphql
    route:
    - destination:
        host: graphql-api
        port:
          number: 4000
